appchooser: Plug a memory leak

We were not dropping the reference that the model gives us.

https://bugzilla.gnome.org/show_bug.cgi?id=774352